NetBSD Problem Report #43533

From www@NetBSD.org  Sat Jun 26 23:57:25 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id DAE5163BA62
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 26 Jun 2010 23:57:25 +0000 (UTC)
Message-Id: <20100626235725.6B98D63B873@www.NetBSD.org>
Date: Sat, 26 Jun 2010 23:57:25 +0000 (UTC)
From: dhgutteridge@sympatico.ca
Reply-To: dhgutteridge@sympatico.ca
To: gnats-bugs@NetBSD.org
Subject: Recent changes to wm(4) prevent it from working properly in virtualized environments
X-Send-Pr-Version: www-1.0

>Number:         43533
>Category:       kern
>Synopsis:       Recent changes to wm(4) prevent it from working properly in virtualized environments
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jun 27 00:00:00 +0000 2010
>Closed-Date:    Mon Jun 28 08:37:46 +0000 2010
>Last-Modified:  Mon Jun 28 08:37:46 +0000 2010
>Originator:     David H. Gutteridge
>Release:        5.99.33
>Organization:
>Environment:
>Description:
As reported on by Kurt Schreiner on current-users:

>I just build new kernels for my NetBSD virtual machines running on
>MacOSx in VirtualBox and VMwareFusion, respectivly. Both virtualizers
>are configured with (virtual) Intel ethernet adapters and worked w/o
>issues with (customized) 5.99.30 kernels compiled some time ago.
>
>With new kernels (using same customized config files as for the older,
>working kernels) built from -current source cvs updated an hour or so
>ago I get the following (this is from VMware, but same issue with
>VirtualBox):
>
>Jun 26 13:15:26 /netbsd: wm0 at pci2 dev 0 function 0: Intel i82545EM 
>1000BASE-T Ethernet, rev. 1
>Jun 26 13:15:26 /netbsd: wm0: interrupting at ioapic0 pin 18
>Jun 26 13:15:26 /netbsd: wm0: 32-bit 66MHz PCI bus
>Jun 26 13:15:26 /netbsd: wm0: 256 word (8 address bits) MicroWire EEPROM
>
>i.e. the adapter is recognized but there's no MAC address found and
>no PHY is attached anymore. (I tried all three possible Intel adapters
>offered by VirtualBox...)
>
>The respective lines from /var/log/messages with the old kernel booted
>are shown here: both MAC adress and PHY are found...
>
>Jun 26 13:16:32 /netbsd: wm0 at pci2 dev 0 function 0: Intel i82545EM 
>1000BASE-T Ethernet, rev. 1
>Jun 26 13:16:32 /netbsd: wm0: interrupting at ioapic0 pin 18
>Jun 26 13:16:32 /netbsd: wm0: 32-bit 66MHz PCI bus
>Jun 26 13:16:32 /netbsd: wm0: 256 word (8 address bits) MicroWire EEPROM
>Jun 26 13:16:32 /netbsd: wm0: Ethernet address 00:50:56:2d:fa:5f
>Jun 26 13:16:32 /netbsd: makphy0 at wm0 phy 1: Marvell 88E1011 Gigabit PHY, 
>rev. 3
>Jun 26 13:16:33 ntpd[327]: Listening on interface #1 wm0, 10.7.76.64#
>
>Any idea anyone where's the culprit?
>
>Kurt

The change in behaviour was caused by:

http://mail-index.netbsd.org/source-changes/2010/06/25/msg011190.html

>How-To-Repeat:
(As above.)
>Fix:
Reversion of the change.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Mon, 28 Jun 2010 01:19:21 +0000
Responsible-Changed-Why:
mine.


From: SAITOH Masanobu <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43533 CVS commit: src/sys/dev/pci
Date: Mon, 28 Jun 2010 01:43:39 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Mon Jun 28 01:43:39 UTC 2010

 Modified Files:
 	src/sys/dev/pci: if_wm.c

 Log Message:
 Fix a bug that wm_attach() fails after reading MAC address. Fixes PR#43533.

 Fix an uninitialized value on some cases.


 To generate a diff of this commit:
 cvs rdiff -u -r1.209 -r1.210 src/sys/dev/pci/if_wm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Mon, 28 Jun 2010 02:19:45 +0000
State-Changed-Why:
I believe I've fixed with rev. 1.210 of if_wm.c. Could you verify?


From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/43533 (Recent changes to wm(4) prevent it from working properly in virtualized environments)
Date: Mon, 28 Jun 2010 01:58:52 -0400

 On 2010-06-27, at 10:19 PM, msaitoh@NetBSD.org wrote:

 > Synopsis: Recent changes to wm(4) prevent it from working properly in =
 virtualized environments
 >=20
 > State-Changed-From-To: open->feedback
 > State-Changed-By: msaitoh@NetBSD.org
 > State-Changed-When: Mon, 28 Jun 2010 02:19:45 +0000
 > State-Changed-Why:
 > I believe I've fixed with rev. 1.210 of if_wm.c. Could you verify?

 Yes, that fixes things for me.  Thanks for the quick response!

 Regards,

 Dave=

State-Changed-From-To: feedback->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Mon, 28 Jun 2010 08:37:46 +0000
State-Changed-Why:
Fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.