Fix a bug that wm_attach() fails after reading MAC address. Fixes PR#43533.

Fix an uninitialized value on some cases.